[gd_scene load_steps=6 format=2]

[ext_resource path="res://Hook.gd" type="Script" id=1]
[ext_resource path="res://TargetCircle.gd" type="Script" id=2]
[ext_resource path="res://Arrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://HookingPoint.gd" type="Script" id=4]
[ext_resource path="res://SnapDetector.tscn" type="PackedScene" id=5]

[node name="Hook" type="Position2D"]
script = ExtResource( 1 )

[node name="TargetCircle" type="Node2D" parent="."]
script = ExtResource( 2 )
offset = Vector2( 120, 0 )
color = Color( 1, 0.34375, 0.635986, 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 460, 0 )
collision_mask = 6

[node name="Arrow" parent="." instance=ExtResource( 3 )]
visible = false

[node name="TargetHint" type="Node2D" parent="."]
visible = false
script = ExtResource( 4 )
color_hook = Color( 0.0352941, 0.65098, 0.792157, 1 )
color_cooldown = Color( 1, 0, 0.305882, 1 )

[node name="Cooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="SnapDetector" parent="." instance=ExtResource( 5 )]

[connection signal="hooked_onto_target" from="." to="SnapDetector" method="_on_Hook_hooked_onto_target"]
